[package]
name = "nvgl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[dependencies]
wasm-bindgen="0.2.92"
js-sys = "0.3.69"
peg = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colors-transform = "0.2.11"

[dependencies.web-sys]
version = "0.3.69"
features = [
    'console',
]